--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -7,7 +7,6 @@
       "name": "Transformer задание",
       "provenance": [],
       "collapsed_sections": [
-        "hfFiCHbrUT6w",
         "CuqzsOEIVVQb",
         "1yoDwZtCWBmF",
         "bZ8xq_ZdWnpq",
@@ -55,7 +54,7 @@
         "\n",
         "Данный ноутбук закрепляет на практике понимание архитектуры \"трансформер\", которая была предложена группой исследователей из Google в 2017 году в статье [Attention Is All You Need](https://arxiv.org/abs/1706.03762).\n",
         "\n",
-        "Трансформер и его модификации получили широкое распространение в задачах NLP ([BERT](https://arxiv.org/abs/1810.04805), [ALBERT](https://arxiv.org/abs/1909.11942v6), [RoBERTa](https://arxiv.org/abs/1907.11692), [GPT](https://cdn.openai.com/research-covers/language-unsupervised/language_understanding_paper.pdf), [GPT-2](https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf), [GPT-3](https://arxiv.org/abs/2005.14165), [ruGPT-3](https://sbercloud.ru/ru/warp/gpt-3), [Turing-NLG](https://www.microsoft.com/en-us/research/blog/turing-nlg-a-17-billion-parameter-language-model-by-microsoft/), [Switch Transformer](https://arxiv.org/abs/2101.03961), [EFL](https://arxiv.org/abs/2104.14690v1), [Reformer](https://ai.googleblog.com/2020/01/reformer-efficient-transformer.html) и много других). Языковые модели, основанные на трансформерах, способны генерировать [тексты](https://mobile.twitter.com/raphamilliere/status/1289129723310886912), почти неотличимые от написанных человеком. Трансформеры также начинают активно использоваться в компьютерном зрении ([ViT](https://arxiv.org/abs/2106.04803v2), [HRNet](https://arxiv.org/abs/1909.11065v6), [SwinIR](https://arxiv.org/abs/2108.10257) и др., см. также [здесь](https://habr.com/ru/post/578308/) и [здесь](https://arxiv.org/abs/2101.01169)), в мультимодальных сетях, связанных одновременно с изображениями и текстом ([CLIP](https://openai.com/blog/clip/), [DALL-E](https://openai.com/blog/dall-e/), [Wu Dao](https://www.forbes.com/sites/alexzhavoronkov/2021/07/19/wu-dao-20bigger-stronger-faster-ai-from-china/) и др.), и даже в предсказании структуры белков ([AlphaFold2](https://www.nature.com/articles/s41586-021-03819-2)). Более того, есть [работа](https://arxiv.org/abs/2103.05247), показывающая, что трансформер может претендовать на роль универсальной архитектуры для одновременного решения самых разных задач.\n",
+        "Трансформер и его модификации получили широкое распространение в задачах NLP ([BERT](https://arxiv.org/abs/1810.04805), [ALBERT](https://arxiv.org/abs/1909.11942v6), [RoBERTa](https://arxiv.org/abs/1907.11692), [GPT](https://cdn.openai.com/research-covers/language-unsupervised/language_understanding_paper.pdf), [GPT-2](https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf), [GPT-3](https://arxiv.org/abs/2005.14165), [ruGPT-3](https://sbercloud.ru/ru/warp/gpt-3), [Turing-NLG](https://www.microsoft.com/en-us/research/blog/turing-nlg-a-17-billion-parameter-language-model-by-microsoft/), [Switch Transformer](https://arxiv.org/abs/2101.03961), [EFL](https://arxiv.org/abs/2104.14690v1), [Reformer](https://ai.googleblog.com/2020/01/reformer-efficient-transformer.html), [T5](https://arxiv.org/abs/1910.10683) и много других). Языковые модели, основанные на трансформерах, способны генерировать [тексты](https://mobile.twitter.com/raphamilliere/status/1289129723310886912), почти неотличимые от написанных человеком. Трансформеры также начинают активно использоваться в компьютерном зрении ([ViT](https://arxiv.org/abs/2106.04803v2), [HRNet](https://arxiv.org/abs/1909.11065v6), [SwinIR](https://arxiv.org/abs/2108.10257) и др., см. также [здесь](https://habr.com/ru/post/578308/) и [здесь](https://arxiv.org/abs/2101.01169)), в мультимодальных сетях, связанных одновременно с изображениями и текстом ([CLIP](https://openai.com/blog/clip/), [DALL-E](https://openai.com/blog/dall-e/), [Wu Dao](https://www.forbes.com/sites/alexzhavoronkov/2021/07/19/wu-dao-20bigger-stronger-faster-ai-from-china/) и др.), и даже в предсказании структуры белков ([AlphaFold2](https://www.nature.com/articles/s41586-021-03819-2)). Более того, есть [работа](https://arxiv.org/abs/2103.05247), показывающая, что трансформер может претендовать на роль универсальной архитектуры для одновременного решения самых разных задач.\n",
         "\n",
         "Трансформер - непростая архитектура, и перед тем, как переходить к практике построения трансформеров, рекомендуется хорошо изучить принцип их устройства. Для этого вы можете использовать следующие материалы:\n",
         "\n",
@@ -127,7 +126,7 @@
         "    weights = F.softmax(scalar_products, dim=1)\n",
         "    return weights @ V"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +153,7 @@
         "V = torch.ones((2, 8, 10))\n",
         "scaled_dot_product_attention(Q, K, V)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +181,7 @@
         "id": "eukxFankUQbz"
       },
       "source": [
-        "Получился массив из двоек. Но мы считаем взвешенное среднее массива из единиц, как же мы получаем двойки? Так и должно быть, или где-то в коде ошибка? Если в коде функции `scaled_dot_product_attention`. А может быть мы неправильно используем эту функцию?\n",
+        "Получился массив из двоек. Но мы считаем взвешенное среднее массива из единиц, как же мы получаем двойки? Так и должно быть, или где-то в коде функции `scaled_dot_product_attention` ошибка? А может быть мы неправильно используем эту функцию?\n",
         "\n",
         "Если вы считаете, что в коде ошибка, то исправьте ее."
       ]
@@ -316,7 +315,7 @@
         "      assert outputs[0, i, 0] == (F.softmax(_range[i]*_range[:i+1], dim=0)*_range[:i+1]).sum()\n",
         "  print('Check passed!')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +447,7 @@
         "\n",
         "        return outputs"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +473,7 @@
         "outputs = block(inputs)\n",
         "assert outputs.shape == inputs.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +603,7 @@
         "\n",
         "EncoderBlock.forward = forward"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -663,7 +662,7 @@
         "texts = df.text.to_numpy() #исходные данные\n",
         "target = df.genre.to_numpy() #целевые данные"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +756,7 @@
         "train_dataset = torch.utils.data.TensorDataset(token_indices[:40000], target[:40000])\n",
         "val_dataset = torch.utils.data.TensorDataset(token_indices[40000:], target[40000:])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +828,7 @@
         "        avg_acc = torch.stack([x['val_acc'].float() for x in validation_step_outputs]).mean()\n",
         "        print(f'val accuracy {avg_acc.cpu().numpy():g}, ', end='')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +858,7 @@
         "    def configure_optimizers(self):\n",
         "        return torch.optim.Adam(self.parameters(), lr=1e-3)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +909,7 @@
         "\n",
         "SimpleModel.forward = forward"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -987,7 +986,7 @@
         "        x = torch.transpose(x, 0, 1)\n",
         "        return self.dropout(x)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
